crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_styles_borders.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/styles_borders.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>A</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>B</t></is></c><c r="C1" t="inlineStr" s="1"><is><t>C</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t>all borders</t></is></c><c r="B2" t="inlineStr"><is><t>all borders</t></is></c><c r="C2" t="inlineStr"><is><t>all borders</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>dashed</t></is></c><c r="B3" t="inlineStr"><is><t>dashed</t></is></c><c r="C3" t="inlineStr"><is><t>dashed</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t>none</t></is></c><c r="B4" t="inlineStr"><is><t>none</t></is></c><c r="C4" t="inlineStr"><is><t>none</t></is></c></row>
</sheetData>
</worksheet>
