crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_summary_rows.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/summary_rows.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>Item</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>Qty</t></is></c><c r="C1" t="inlineStr" s="1"><is><t>Total</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t>Order #1234</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>Apples</t></is></c><c r="B3" t="inlineStr"><is><t>5</t></is></c><c r="C3"><v>7.5</v></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t>Bread</t></is></c><c r="B4" t="inlineStr"><is><t>2</t></is></c><c r="C4"><v>8</v></c></row>
<row r="5"><c r="A5" t="inlineStr" s="1"><is><t>Total</t></is></c><c r="B5" t="inlineStr" s="1"><is><t>7</t></is></c><c r="C5" s="1"><v>15.5</v></c></row>
</sheetData>
</worksheet>
