crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_unicode_cjk.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/unicode_cjk.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>世界の都市</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t>都市</t></is></c><c r="B2" t="inlineStr" s="1"><is><t>人口 (万人)</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>東京</t></is></c><c r="B3"><v>1396</v></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t>大阪</t></is></c><c r="B4"><v>884</v></c></row>
</sheetData>
</worksheet>
