crates/gridwell-writer-xlsx/tests/snapshots/snapshots__text-format.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Format</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Sample</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">underline</t></is></c><c r="B2" t="inlineStr" s="2"><is><t xml:space="preserve">Underlined</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">line-through</t></is></c><c r="B3" t="inlineStr" s="3"><is><t xml:space="preserve">Struck out</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">18px</t></is></c><c r="B4" t="inlineStr" s="4"><is><t xml:space="preserve">Larger text</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr"><is><t xml:space="preserve">smaller</t></is></c><c r="B5" t="inlineStr" s="5"><is><t xml:space="preserve">Smaller text</t></is></c></row>
<row r="6"><c r="A6" t="inlineStr"><is><t xml:space="preserve">inline</t></is></c><c r="B6" t="inlineStr"><is><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">Plain, </t></r><r><rPr><u/><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">underlined</t></r><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">, </t></r><r><rPr><strike/><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve">struck</t></r><r><rPr><sz val="11"/><rFont val="Calibri"/></rPr><t xml:space="preserve"> and </t></r><r><rPr><sz val="13.5"/><rFont val="Calibri"/></rPr><t xml:space="preserve">large</t></r></is></c></row>
</sheetData>
</worksheet>
